# SJ_HH_parsing

./: README.md  pyproject.toml
src/: abstract_methods.py  api.py  config_json_file.py  filter_salary.py  hh_pars.py  main.py  parser.py  sj_pars.py  vacancies.json  vacancy.py
